@@ -1,4 +1,4 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.compiler.server;
 
 import com.intellij.compiler.YourKitProfilerService;
@@ -14,6 +14,7 @@ import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.util.system.OS;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.jps.api.GlobalOptions;
@@ -58,7 +59,7 @@ final class WslBuildCommandLineBuilder implements BuildCommandLineBuilder {
       myHostWorkingDirectory = buildDirectory.toString();
       myWorkingDirectory = myDistribution.getWslPath(myHostWorkingDirectory);
       myClasspathDirectory = myWorkingDirectory + "/jps-" + ApplicationInfo.getInstance().getBuild().asString();
-      myHostClasspathDirectory = Paths.get(myDistribution.getWindowsPath(myClasspathDirectory));
+      myHostClasspathDirectory = Path.of(myDistribution.getWindowsPath(myClasspathDirectory));
       if (ApplicationInfo.getInstance().getBuild().isSnapshot() && !CURRENT_SNAPSHOT_COPIED) {
         //noinspection AssignmentToStaticFieldFromInstanceMethod
         CURRENT_SNAPSHOT_COPIED = true;
@@ -94,7 +95,7 @@ final class WslBuildCommandLineBuilder implements BuildCommandLineBuilder {
       if (!builder.isEmpty()) {
         builder.append(":");
       }
-      Path path = Paths.get(pathName);
+      Path path = Path.of(pathName);
       if (myClasspathDirectory != null && myHostClasspathDirectory != null) {
         Path targetPath = copyProjectAgnosticPathToTargetIfRequired(path);
         if (!myReportedProgress && !targetPath.equals(path) && myProgressIndicator != null) {
@@ -143,7 +144,7 @@ final class WslBuildCommandLineBuilder implements BuildCommandLineBuilder {
 
   @Override
   public @NotNull Path getHostWorkingDirectory() {
-    return Paths.get(myHostWorkingDirectory);
+    return Path.of(myHostWorkingDirectory);
   }
 
   @Override
@@ -181,12 +182,12 @@ final class WslBuildCommandLineBuilder implements BuildCommandLineBuilder {
   }
 
   public static @Nullable Path getWslBuildSystemDirectory(WSLDistribution distribution) {
-    String pathsSelector = PathManager.getPathsSelector();
-    String wslUserHome = distribution.getUserHome();
+    var pathsSelector = PathManager.getPathsSelector();
+    var wslUserHome = distribution.getUserHome();
     if (wslUserHome == null) return null;
-    String windowsUserHomePath = distribution.getWindowsPath(wslUserHome);
+    var windowsUserHomePath = distribution.getWindowsPath(wslUserHome);
     if (pathsSelector == null) pathsSelector = "." + ApplicationNamesInfo.getInstance().getScriptName();
-    String workingDirectory = PathManager.getDefaultUnixSystemPath(windowsUserHomePath, pathsSelector) + "/" + BuildManager.SYSTEM_ROOT;
-    return Paths.get(workingDirectory);
+    var workingDirectory = PathManager.getDefaultSystemPathFor(OS.Linux, windowsUserHomePath, pathsSelector) + '/' + BuildManager.SYSTEM_ROOT;
+    return Path.of(workingDirectory);
   }
 }
