@@ -336,13 +336,19 @@ public final class PluginXmlDomInspection extends DevKitPluginXmlInspectionBase 
                           holder, true, true);
     }
 
+    //noinspection deprecation
+    if (DomUtil.hasXml(ideaPlugin.getPackage())) {
+      //noinspection deprecation
+      highlightDeprecated(ideaPlugin.getPackage(), DevKitBundle.message("inspections.plugin.xml.deprecated.package.attribute"), holder, true, true);
+    }
+
     checkMaxLength(ideaPlugin.getUrl(), 255, holder);
     checkValidWebsite(ideaPlugin.getUrl(), holder);
 
     checkMaxLength(ideaPlugin.getId(), 255, holder);
 
     checkTemplateText(project, ideaPlugin.getName(), "Plugin display name here", holder);
-    checkTemplateTextContainsWord(project, ideaPlugin.getName(), holder, "plugin", "IntelliJ", "JetBrains");
+    checkTemplateTextContainsWord(project, ideaPlugin.getName(), holder, "plugin", "support", "integration", "tool", "tools", "IntelliJ", "JetBrains");
     checkMaxLength(ideaPlugin.getName(), 255, holder);
 
     checkMaxLength(ideaPlugin.getDescription(), 65535, holder);
@@ -567,7 +573,7 @@ public final class PluginXmlDomInspection extends DevKitPluginXmlInspectionBase 
       return false;
     }
 
-    String epName = fragments.get(fragments.size() - 1);
+    String epName = fragments.getLast();
     List<String> butLast = fragments.subList(0, fragments.size() - 1);
     List<String> words = StringUtil.getWordsIn(epName);
     return !ContainerUtil.exists(words, w -> ContainerUtil.exists(butLast, f -> StringUtil.equalsIgnoreCase(w, f)));
@@ -647,40 +653,51 @@ public final class PluginXmlDomInspection extends DevKitPluginXmlInspectionBase 
     highlightAttributeNotUsedAnymore(ideaVersion.getMin(), holder);
     //noinspection deprecation
     highlightAttributeNotUsedAnymore(ideaVersion.getMax(), holder);
-    highlightUntilBuild(ideaVersion, holder);
+    highlightUntilBuild(ideaVersion, ideaVersion.getUntilBuild(), "until-build", holder);
+    highlightUntilBuild(ideaVersion, ideaVersion.getStrictUntilBuild(), "strict-until-build", holder);
 
     GenericAttributeValue<BuildNumber> sinceBuild = ideaVersion.getSinceBuild();
-    GenericAttributeValue<BuildNumber> untilBuild = ideaVersion.getUntilBuild();
-    if (!DomUtil.hasXml(sinceBuild) &&
-        !DomUtil.hasXml(untilBuild)) {
-      return;
-    }
-
-    BuildNumber sinceBuildNumber = sinceBuild.getValue();
-    BuildNumber untilBuildNumber = untilBuild.getValue();
-    if (sinceBuildNumber == null || untilBuildNumber == null) return;
-
-    int compare = Comparing.compare(sinceBuildNumber, untilBuildNumber);
-    if (compare > 0) {
-      holder.createProblem(untilBuild, DevKitBundle.message("inspections.plugin.xml.until.build.must.be.greater.than.since.build"));
+    if (DomUtil.hasXml(sinceBuild)) {
+      BuildNumber sinceBuildNumber = sinceBuild.getValue();
+      if (sinceBuildNumber != null) {
+        checkUntilBuildGreaterThanSinceBuild(ideaVersion.getUntilBuild(), "until-build", sinceBuildNumber, holder);
+        checkUntilBuildGreaterThanSinceBuild(ideaVersion.getStrictUntilBuild(), "strict-until-build", sinceBuildNumber, holder);
+      }
     }
   }
 
-  private static void highlightUntilBuild(IdeaVersion ideaVersion, DomElementAnnotationHolder holder) {
-    String untilBuild = ideaVersion.getUntilBuild().getStringValue();
-    if (untilBuild != null && isStarSupported(ideaVersion.getSinceBuild().getStringValue())) {
-      Matcher matcher = PluginManager.EXPLICIT_BIG_NUMBER_PATTERN.matcher(untilBuild);
+  private static void checkUntilBuildGreaterThanSinceBuild(GenericAttributeValue<BuildNumber> untilBuild,
+                                                           @NonNls String untilAttributeName, BuildNumber sinceBuildNumber,
+                                                           DomElementAnnotationHolder holder) {
+    if (DomUtil.hasXml(untilBuild)) {
+      BuildNumber untilBuildNumber = untilBuild.getValue();
+      if (untilBuildNumber != null) {
+        int compare = Comparing.compare(sinceBuildNumber, untilBuildNumber);
+        if (compare > 0) {
+          holder.createProblem(untilBuild, DevKitBundle.message("inspections.plugin.xml.until.build.must.be.greater.than.since.build", untilAttributeName));
+        }
+      }
+    }
+  }
+
+  private static void highlightUntilBuild(IdeaVersion ideaVersion,
+                                          GenericAttributeValue<BuildNumber> untilBuild,
+                                          @NonNls String attributeName,
+                                          DomElementAnnotationHolder holder) {
+    String untilBuildValue = untilBuild.getStringValue();
+    if (untilBuildValue != null && isStarSupported(ideaVersion.getSinceBuild().getStringValue())) {
+      Matcher matcher = PluginManager.EXPLICIT_BIG_NUMBER_PATTERN.matcher(untilBuildValue);
       if (matcher.matches()) {
         holder.createProblem(
-          ideaVersion.getUntilBuild(),
-          DevKitBundle.message("inspections.plugin.xml.until.build.use.asterisk.instead.of.big.number", matcher.group(2)),
-          new CorrectUntilBuildAttributeFix(PluginManager.convertExplicitBigNumberInUntilBuildToStar(untilBuild)));
+          untilBuild,
+          DevKitBundle.message("inspections.plugin.xml.until.build.use.asterisk.instead.of.big.number", matcher.group(2), attributeName),
+          new CorrectUntilBuildAttributeFix(PluginManager.convertExplicitBigNumberInUntilBuildToStar(untilBuildValue)));
       }
-      if (untilBuild.matches("\\d+")) {
-        int branch = Integer.parseInt(untilBuild);
+      if (untilBuildValue.matches("\\d+")) {
+        int branch = Integer.parseInt(untilBuildValue);
         String corrected = (branch - 1) + ".*";
-        holder.createProblem(ideaVersion.getUntilBuild(),
-                             DevKitBundle.message("inspections.plugin.xml.until.build.misleading.plain.number", untilBuild, corrected),
+        holder.createProblem(untilBuild,
+                             DevKitBundle.message("inspections.plugin.xml.until.build.misleading.plain.number", untilBuildValue, corrected, attributeName),
                              new CorrectUntilBuildAttributeFix(corrected));
       }
     }
@@ -891,7 +908,7 @@ public final class PluginXmlDomInspection extends DevKitPluginXmlInspectionBase 
     checkMaxLength(vendor, 255, holder);
 
     //noinspection HttpUrlsUsage
-    checkTemplateText(project, vendor.getUrl(), "http://www.yourcompany.com", holder); // used in old template
+    checkTemplateText(project, vendor.getUrl(), "http://www.yourcompany.com", holder); // used in the old template
     checkTemplateText(project, vendor.getUrl(), "https://www.yourcompany.com", holder);
     checkMaxLength(vendor.getUrl(), 255, holder);
     checkValidWebsite(vendor.getUrl(), holder);
@@ -1356,7 +1373,7 @@ public final class PluginXmlDomInspection extends DevKitPluginXmlInspectionBase 
     private boolean isFirstDuplicateDeclaration(Component checkedComponent) {
       if (checkedComponent == component) return false;
       XmlElement element = checkedComponent.getXmlElement();
-      if (element != null && element.getTextOffset() >= componentTextOffset) return false; // do not check after component's offset
+      if (element != null && element.getTextOffset() >= componentTextOffset) return false; // do not check after a component's offset
       if (componentLevelsEqual(component, checkedComponent)) {
         if (componentInterfaceClass.equals(checkedComponent.getInterfaceClass().getValue())) {
           if (component instanceof Component.Module) {
