@@ -54,10 +54,11 @@ public class PyClassPatternImpl extends PyElementImpl implements PyClassPattern,
     if (!(context.getType(refName) instanceof PyClassType classType)) return false;
 
     final List<PyPattern> arguments = getArgumentList().getPatterns();
-    if (SPECIAL_BUILTINS.contains(classType.getClassQName())) {
+    final @Nullable String classQName = classType.getClassQName();
+    if (classQName != null && SPECIAL_BUILTINS.contains(classQName)) {
       if (arguments.isEmpty()) return true;
       if (arguments.size() > 1) return false;
-      return arguments.get(0).canExcludePatternType(context);
+      return arguments.getFirst().canExcludePatternType(context);
     }
 
     List<String> matchArgs = getMatchArgs(classType, context);
@@ -104,7 +105,8 @@ public class PyClassPatternImpl extends PyElementImpl implements PyClassPattern,
     // capture type can be a union like: list[int] | list[str]
     return PyTypeUtil.toStream(context.getType(this)).map(type -> {
       if (type instanceof PyClassType classType) {
-        if (SPECIAL_BUILTINS.contains(classType.getClassQName())) {
+        final @Nullable String classQName = classType.getClassQName();
+        if (classQName != null && SPECIAL_BUILTINS.contains(classQName)) {
           if (index == 0) {
             return classType;
           }
